--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/typography": "^0.4.0",
+    "framer-motion": "^4.1.3",
     "next": "10.0.6",
+    "next-seo": "^4.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0"
@@ -25,6 +27,7 @@
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.0.4",
+    "cypress": "^7.1.0",
     "postcss": "^8.1.10",
     "tailwindcss": "^2.1.1",
     "typescript": "^4.2.3"
