--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
+    "build": "next build",
+    "postbuild": "next-sitemap",
     "cypress:open": "cypress open"
   },
   "dependencies": {
@@ -29,6 +30,7 @@
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.0.4",
     "cypress": "^7.1.0",
+    "next-sitemap": "^1.6.25",
     "postcss": "^8.1.10",
     "tailwindcss": "^2.1.1",
     "typescript": "^4.2.3"
