favicon and general

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_SITE_URL=https://unt-csce-club.netlify.app/
 NEXT_PUBLIC_DISCORD_INVITE_URL=https://discord.gg/PpJf5N42xe
+NEXT_PUBLIC_INSTAGRAM_URL=https://www.instagram.com/untcsceclub/
+NEXT_PUBLIC_CLUB_EMAIL_ADDRESS=untcsceclub@gmail.com
