--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NEXT_PUBLIC_SITE_URL=https://untcsce.club/
 NEXT_PUBLIC_DISCORD_INVITE_URL=https://discord.gg/PpJf5N42xe
 NEXT_PUBLIC_INSTAGRAM_URL=https://www.instagram.com/untcsceclub/
 NEXT_PUBLIC_CLUB_EMAIL_ADDRESS=contact@untcsce.club
+NEXT_PUBLIC_TWITTER_URL=https://twitter.com/untcsceclub
