--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/typography": "^0.4.0",
+    "contentful": "^8.3.6",
     "framer-motion": "^4.1.3",
     "next": "10.0.6",
     "next-seo": "^4.23.0",
