--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "build": "next build",
     "postbuild": "next-sitemap",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "contentful-typescript-codegen": "contentful-typescript-codegen --output types/generated/contentful.d.ts",
+    "generate": "graphql-codegen dotenv_config_path=/.env.local -r dotenv/config"
   },
   "dependencies": {
     "@headlessui/react": "^0.3.1",
@@ -27,11 +29,17 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.21.5",
+    "@graphql-codegen/typescript": "^1.22.1",
     "@tailwindcss/jit": "0.1.3",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.0.4",
+    "contentful-management": "^7.22.2",
+    "contentful-typescript-codegen": "^3.2.2",
     "cypress": "^7.1.0",
+    "dotenv": "^10.0.0",
+    "graphql": "^15.5.0",
     "next-sitemap": "^1.6.25",
     "postcss": "^8.1.10",
     "tailwindcss": "^2.1.1",
