--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postbuild": "next-sitemap",
     "cypress:open": "cypress open",
     "contentful-typescript-codegen": "contentful-typescript-codegen --output types/generated/contentful.d.ts",
-    "generate": "graphql-codegen dotenv_config_path=/.env.local -r dotenv/config"
+    "generate": "graphql-codegen --config codegen.yml --require dotenv/config"
   },
   "dependencies": {
     "@headlessui/react": "^0.3.1",
