--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/typography": "^0.4.0",
     "contentful": "^8.3.6",
-    "next": "10.0.6",
+    "next": "latest",
     "next-seo": "^4.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
