--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@chec/commerce.js": "^2.7.2",
     "@headlessui/react": "^0.3.1",
     "@heroicons/react": "^1.0.1",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.16.0",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/line-clamp": "^0.2.0",
