--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chec/commerce.js": "^2.7.2",
     "@headlessui/react": "^0.3.1",
     "@heroicons/react": "^1.0.1",
+    "@hookform/error-message": "^2.0.0",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.16.0",
     "@tailwindcss/aspect-ratio": "^0.2.0",
@@ -29,9 +30,12 @@
     "next-seo": "^4.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0"
+    "react-hook-form": "^7.11.1",
+    "react-icons": "^4.2.0",
+    "use-debounce": "^7.0.0"
   },
   "devDependencies": {
+    "@hookform/devtools": "^3.1.0",
     "@tailwindcss/jit": "0.1.3",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
