--- a/package.json
+++ b/package.json
@@ -14,31 +14,30 @@
     "generate": "graphql-codegen --config codegen.yml --require dotenv/config"
   },
   "dependencies": {
-    "@headlessui/react": "^0.3.1",
-    "@heroicons/react": "^1.0.1",
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/line-clamp": "^0.2.0",
-    "@tailwindcss/typography": "^0.4.0",
-    "contentful": "^8.3.6",
-    "next": "latest",
-    "next-seo": "^4.23.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@headlessui/react": "^1.3.0",
+    "@heroicons/react": "^1.0.2",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
+    "contentful": "^8.4.2",
+    "next": "^11.0.1",
+    "next-seo": "^4.26.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/jit": "0.1.3",
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.3",
-    "autoprefixer": "^10.0.4",
-    "contentful-management": "^7.22.2",
+    "@types/node": "^16.4.0",
+    "@types/react": "^17.0.14",
+    "autoprefixer": "^10.3.1",
+    "contentful-management": "^7.30.0",
     "contentful-typescript-codegen": "^3.2.2",
-    "cypress": "^7.1.0",
+    "cypress": "^8.0.0",
     "dotenv": "^10.0.0",
-    "next-sitemap": "^1.6.25",
-    "postcss": "^8.1.10",
-    "tailwindcss": "^2.1.1",
-    "typescript": "^4.2.3"
+    "next-sitemap": "^1.6.140",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.6",
+    "typescript": "^4.3.5"
   }
 }
