--- a/package.json
+++ b/package.json
@@ -15,24 +15,25 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.7.2",
+    "@headlessui/react": "^1.3.0",
+    "@heroicons/react": "^1.0.2",
     "@hookform/error-message": "^2.0.0",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.16.0",
-    "@types/chec__commerce.js": "^2.7.2",
-    "react-hook-form": "^7.11.1",
-    "use-debounce": "^7.0.0",
-    "@headlessui/react": "^1.3.0",
-    "@heroicons/react": "^1.0.2",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
+    "@types/chec__commerce.js": "^2.7.2",
     "contentful": "^8.4.2",
     "next": "^11.0.1",
     "next-seo": "^4.26.0",
+    "next-themes": "^0.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
+    "react-hook-form": "^7.11.1",
+    "react-icons": "^4.2.0",
+    "use-debounce": "^7.0.0"
   },
   "devDependencies": {
     "@hookform/devtools": "^3.1.0",
