--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.1",
+    "react-hot-toast": "^2.0.0",
     "react-icons": "^4.2.0",
     "use-debounce": "^7.0.0"
   },
