--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.7.2",
-    "@headlessui/react": "^1.3.0",
+    "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.2",
     "@hookform/error-message": "^2.0.0",
     "@stripe/react-stripe-js": "^1.4.1",
@@ -26,6 +26,7 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "contentful": "^8.4.2",
+    "focus-visible": "^5.2.0",
     "next": "^11.0.1",
     "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
@@ -50,6 +51,7 @@
     "next-sitemap": "^1.6.140",
     "patch-package": "^6.4.7",
     "postcss": "^8.3.6",
+    "postcss-focus-visible": "^5.0.0",
     "tailwindcss": "^2.2.6",
     "typescript": "^4.3.5"
   }
