--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "generate": "graphql-codegen --config codegen.yml --require dotenv/config"
   },
   "dependencies": {
+    "@babel/core": "^7.15.0",
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
     "@tailwindcss/aspect-ratio": "^0.2.1",
