--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "generate": "graphql-codegen --config codegen.yml --require dotenv/config"
   },
   "dependencies": {
+    "@babel/core": "^7.15.0",
     "@chec/commerce.js": "^2.7.2",
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.2",
@@ -27,7 +28,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "contentful": "^8.4.2",
     "focus-visible": "^5.2.0",
-    "next": "^11.0.1",
+    "next": "^11.1.0",
     "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
     "react": "^17.0.2",
