--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "contentful": "^8.4.2",
     "focus-visible": "^5.2.0",
+    "framer-motion": "^4.1.17",
     "next": "^11.1.0",
     "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
