--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.15.0",
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
+    "@netlify/plugin-nextjs": "^4.0.0-rc.2",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
